// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`With nested values Should correctly validate template 1`] = `
RuleResult {
  "children": Object {
    "friends": RuleResult {
      "children": Object {
        "0": RuleResult {
          "children": Object {
            "id": RuleResult {
              "failed": false,
              "hasErrors": false,
              "hasWarnings": false,
              "message": "Entity id must be valid",
              "warn": false,
            },
          },
          "failed": false,
          "hasErrors": false,
          "hasWarnings": false,
        },
        "1": RuleResult {
          "children": Object {
            "id": RuleResult {
              "failed": false,
              "hasErrors": false,
              "hasWarnings": false,
              "message": "Entity id must be valid",
              "warn": false,
            },
          },
          "failed": false,
          "hasErrors": false,
          "hasWarnings": false,
        },
        "2": RuleResult {
          "children": Object {
            "id": RuleResult {
              "failed": false,
              "hasErrors": false,
              "hasWarnings": false,
              "message": "Entity id must be valid",
              "warn": false,
            },
          },
          "failed": false,
          "hasErrors": false,
          "hasWarnings": false,
        },
        "3": RuleResult {
          "children": Object {
            "id": RuleResult {
              "failed": false,
              "hasErrors": false,
              "hasWarnings": false,
              "message": "Entity id must be valid",
              "warn": false,
            },
          },
          "failed": false,
          "hasErrors": false,
          "hasWarnings": false,
        },
        "4": RuleResult {
          "children": Object {
            "id": RuleResult {
              "failed": false,
              "hasErrors": false,
              "hasWarnings": false,
              "message": "Entity id must be valid",
              "warn": false,
            },
          },
          "failed": false,
          "hasErrors": false,
          "hasWarnings": false,
        },
        "5": RuleResult {
          "children": Object {
            "id": RuleResult {
              "failed": false,
              "hasErrors": false,
              "hasWarnings": false,
              "message": "Entity id must be valid",
              "warn": false,
            },
          },
          "failed": false,
          "hasErrors": false,
          "hasWarnings": false,
        },
      },
      "failed": false,
      "hasErrors": false,
      "hasWarnings": false,
      "isArray": true,
      "message": "friend id must be a valid entity id",
    },
    "id": RuleResult {
      "failed": false,
      "hasErrors": false,
      "hasWarnings": false,
      "message": "Entity id must be valid",
      "warn": false,
    },
    "name": RuleResult {
      "children": Object {
        "first": RuleResult {
          "failed": false,
          "hasErrors": false,
          "hasWarnings": false,
          "warn": false,
        },
        "last": RuleResult {
          "failed": false,
          "hasErrors": false,
          "hasWarnings": false,
          "warn": false,
        },
        "middle": RuleResult {
          "failed": false,
          "hasErrors": false,
          "hasWarnings": false,
          "warn": false,
        },
        "username": RuleResult {
          "failed": false,
          "hasErrors": false,
          "hasWarnings": false,
          "warn": false,
        },
      },
      "failed": false,
      "hasErrors": false,
      "hasWarnings": false,
    },
  },
  "failed": false,
  "hasErrors": false,
  "hasWarnings": false,
}
`;

exports[`With nested values Should correctly validate template 2`] = `
RuleResult {
  "children": Object {
    "friends": RuleResult {
      "children": Object {
        "0": RuleResult {
          "children": Object {
            "id": RuleResult {
              "failed": false,
              "hasErrors": false,
              "hasWarnings": false,
              "message": "Entity id must be valid",
              "warn": false,
            },
          },
          "failed": false,
          "hasErrors": false,
          "hasWarnings": false,
        },
        "1": RuleResult {
          "children": Object {
            "id": RuleResult {
              "failed": true,
              "hasErrors": true,
              "hasWarnings": false,
              "message": "Entity id must be valid",
              "warn": false,
            },
          },
          "failed": true,
          "hasErrors": true,
          "hasWarnings": false,
        },
      },
      "failed": true,
      "hasErrors": true,
      "hasWarnings": false,
      "isArray": true,
      "message": "friend id must be a valid entity id",
    },
    "id": RuleResult {
      "failed": false,
      "hasErrors": false,
      "hasWarnings": false,
      "message": "Entity id must be valid",
      "warn": false,
    },
    "name": RuleResult {
      "children": Object {
        "first": RuleResult {
          "failed": false,
          "hasErrors": false,
          "hasWarnings": false,
          "warn": false,
        },
        "last": RuleResult {
          "failed": false,
          "hasErrors": false,
          "hasWarnings": false,
          "warn": false,
        },
        "middle": RuleResult {
          "failed": false,
          "hasErrors": false,
          "hasWarnings": false,
          "warn": false,
        },
        "username": RuleResult {
          "failed": false,
          "hasErrors": false,
          "hasWarnings": false,
          "warn": false,
        },
      },
      "failed": false,
      "hasErrors": false,
      "hasWarnings": false,
    },
  },
  "failed": true,
  "hasErrors": true,
  "hasWarnings": false,
}
`;

exports[`With nested values Should correctly validate template 3`] = `
RuleResult {
  "children": Object {
    "friends": RuleResult {
      "children": Object {
        "0": RuleResult {
          "children": Object {
            "id": RuleResult {
              "failed": false,
              "hasErrors": false,
              "hasWarnings": false,
              "message": "Entity id must be valid",
              "warn": false,
            },
          },
          "failed": false,
          "hasErrors": false,
          "hasWarnings": false,
        },
      },
      "failed": false,
      "hasErrors": false,
      "hasWarnings": false,
      "isArray": true,
      "message": "friend id must be a valid entity id",
    },
    "id": RuleResult {
      "failed": true,
      "hasErrors": true,
      "hasWarnings": false,
      "message": "Entity id must be valid",
      "warn": false,
    },
    "name": RuleResult {
      "children": Object {
        "first": RuleResult {
          "failed": false,
          "hasErrors": false,
          "hasWarnings": false,
          "warn": false,
        },
        "last": RuleResult {
          "failed": false,
          "hasErrors": false,
          "hasWarnings": false,
          "warn": false,
        },
        "middle": RuleResult {
          "failed": false,
          "hasErrors": false,
          "hasWarnings": false,
          "warn": false,
        },
        "username": RuleResult {
          "failed": true,
          "hasErrors": true,
          "hasWarnings": false,
          "warn": false,
        },
      },
      "failed": true,
      "hasErrors": true,
      "hasWarnings": false,
    },
  },
  "failed": true,
  "hasErrors": true,
  "hasWarnings": false,
}
`;

exports[`enforce.template joined templates Should validate all joined templates 1`] = `
RuleResult {
  "failed": false,
  "hasErrors": false,
  "hasWarnings": false,
  "warn": false,
}
`;

exports[`enforce.template joined templates Should validate all joined templates 2`] = `
RuleResult {
  "failed": false,
  "hasErrors": false,
  "hasWarnings": false,
  "warn": false,
}
`;

exports[`enforce.template joined templates Should validate all joined templates 3`] = `
RuleResult {
  "failed": false,
  "hasErrors": false,
  "hasWarnings": false,
  "warn": false,
}
`;
